src/features/list/assets/_List.scss
@use 'src/assets/main';
@use 'src/assets/global';

.list-container {
	background: var(--bg-dark);
	height: 100%;
	position: relative;
	overflow-y: auto;
	overflow-x: hidden;

	padding: 0.5rem;
	display: flex;
	align-items: flex-start;
	flex-direction: column;
	row-gap: 0.5rem;
	flex: 1 0 auto;
}

.selected-file-container[data-visible='true'] ~ .list-container {
	width: 350px;
	flex-grow: 0;
}

.go-up-button {
	@extend .shadow-base;
	@extend .center-content;
	@include main.hover-bg(var(--bg-dark));

	position: absolute;
	right: 1rem;
	bottom: 1rem;

	transition: opacity 250ms ease;

	border: 1px solid var(--border);
	border-radius: 50%;

	height: 3rem;
	aspect-ratio: 1 / 1;

	&[data-visible='false'] {
		opacity: 0;
		pointer-events: none;
	}
}

.list-layout-container {
	display: flex;
	width: 100%;
	height: 100%;
	overflow: hidden;
	background: var(--bg-dark);
	position: relative;
}

